completed user area, building admin area

--- a/signup.html
+++ b/signup.html
@@ -185,7 +185,16 @@
                                 <span id="error-msg" class="hide">Invalid number</span> -->
 
                                 <label class="fw-semibold text-secondary mb-2 mt-4">Address</label>
-                                <input type="text" id="address" placeholder="Enter your Address" class="w-100 rounded" required>
+                                <input type="text" id="address" placeholder="Enter your House number and Address " class="w-100 rounded" required>
+
+                                <label class="fw-semibold text-secondary mb-2 mt-4">City</label>
+                                <input type="text" id="city" placeholder="Enter your City" class="w-100 rounded" required>  
+                                
+                                <label class="fw-semibold text-secondary mb-2 mt-4">State</label>
+                                <input type="text" id="state" placeholder="Enter your State" class="w-100 rounded" required>
+
+                                <label class="fw-semibold text-secondary mb-2 mt-4">Country</label>
+                                <input type="text" id="country" placeholder="Enter your Country" class="w-100 rounded" required>
 
                                 <label class="fw-semibold text-secondary mb-2 mt-4">Password</label>
                                 <input type="password" id="password" placeholder="Enter password" class="w-100 rounded" minlength="8" 
