--- a/iadmin/auth.html
+++ b/iadmin/auth.html
@@ -79,7 +79,7 @@
                 <form id="adminVerify-form">
                     <div class="form-group">
                         <label for="adminCode">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter Registration Email">
+                        <input type="email" class="form-control" placeholder="Enter Registration Email">
                     </div>
                     <div class="form-group">
                         <label for="userCode">User Code</label>
