--- a/iadmin/dashboard.html
+++ b/iadmin/dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <title>Sign Up</title>
+    <title>Taximania ADMIN Dashboard</title>
     <!-- stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/fontawesome.min.css" />
@@ -73,28 +73,16 @@
 
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                     <div class="card-body">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered text-center">
                             <thead>
                                 <tr>
                                     <th scope="col">Name</th>
-                                    <th scope="col">Verification Documents</th>
+                                    <th scope="col">Documents</th>
                                     <th scope="col">Verify</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>John Doe Bala blu agbado broooom mpower</td>
-                                    <td>
-                                        <button class="btn btn-link" type="button" data-toggle="modal"
-                                            data-target="#documentsModal">
-                                            View Documents
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-primary">Verify</button>
-                                        <button class="btn btn-danger">Reject</button>
-                                    </td>
-                                </tr>
+                            <tbody id="userverify">
+
                             </tbody>
                         </table>
                     </div>
@@ -103,17 +91,17 @@
             <!-- Modal -->
             <div class="modal fade" id="documentsModal" tabindex="-1" role="dialog" aria-labelledby="documentsModalLabel"
                 aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content" style="width : 100%">
                         <div class="modal-header">
                             <h5 class="modal-title" id="documentsModalLabel">Verification Documents</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div class="modal-body">
-                            <img src="../assets/img/dealers/01.jpg" alt="Document 1" class="img-fluid">
-                            <img src="../assets/img/dealers/02.jpg" alt="Document 2" class="img-fluid">
+                        <div class="modal-body docimg" id="modal-images">
+                            <!-- <img src="../assets/img/dealers/01.jpg" alt="Document 1" class="img-fluid">
+                            <img src="../assets/img/dealers/02.jpg" alt="Document 2" class="img-fluid"> -->
                         </div>
                     </div>
                 </div>
@@ -131,27 +119,19 @@
                 <div id="vehicleVerificationCollapse" class="collapse show" aria-labelledby="vehicleVerificationHeading"
                     data-parent="#accordionExample">
                     <div class="card-body">
-                        <table class="table">
+                        <table class="table table-bordered text-center">
                             <thead>
                                 <tr>
                                     <th>Owner's Name</th>
                                     <th>Plate Number</th>
                                     <th>VIN</th>
+                                    <th>Vehicle Name</th>
                                     <th>Images</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>John Doe</td>
-                                    <td>ABC-123</td>
-                                    <td>1234567890</td>
-                                    <td><a href="#" data-toggle="modal" data-target="#vehicleImagesModal">View Images</a></td>
-                                    <td>
-                                        <button type="button" class="btn btn-success btn-sm">Verify</button>
-                                        <button type="button" class="btn btn-danger btn-sm">Reject</button>
-                                    </td>
-                                </tr>
+                            <tbody id="vehicleverify">
+
                             </tbody>
                         </table>
                     </div>
