enabled google maps for profile page

--- a/accounts/profile.html
+++ b/accounts/profile.html
@@ -50,8 +50,7 @@
 
     <!-- google maps -->
     <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
-    <!-- <script type="text/javascript" -->
-        <!-- src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJfzOqR9u2eyXv6OaiuExD3jzoBGGIVKY&libraries=geometry,places&v=weekly"></script> -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJfzOqR9u2eyXv6OaiuExD3jzoBGGIVKY&libraries=geometry,places&v=weekly"></script> -->
 
     <!--axios cdn-->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
