commented out custom.js script from profile page

--- a/accounts/profile.html
+++ b/accounts/profile.html
@@ -50,7 +50,8 @@
 
     <!-- google maps -->
     <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJfzOqR9u2eyXv6OaiuExD3jzoBGGIVKY&libraries=geometry,places&v=weekly"></script> -->
+    <!-- <script type="text/javascript" -->
+        <!-- src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJfzOqR9u2eyXv6OaiuExD3jzoBGGIVKY&libraries=geometry,places&v=weekly"></script> -->
 
     <!--axios cdn-->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -717,7 +718,7 @@
     <script src="../assets/js/vendors/price-range.js"></script>
     <script src="../assets/js/app.js"></script>
     <script src='../assets/js/api.js'></script>
-    <script src='../assets/js/custom.js'></script>
+    <!-- <script src='../assets/js/custom.js'></script> -->
     <!--endbuild-->
 </body>
 
