--- a/iadmin/auth.html
+++ b/iadmin/auth.html
@@ -35,7 +35,7 @@
                         </button>
                         <p class="signup">
                             Don't have an account ?
-                            <a href="#" id="sign-up-btn">Sign Up.</a>
+                            <a href="" id="sign-up-btn">Sign Up.</a>
                         </p>
                     </form>
                 </div>
@@ -57,7 +57,7 @@
                         </button>
                         <p class="signup">
                             Already have an account ?
-                            <a href="#" id="sign-in-btn">Sign in.</a>
+                            <a href="" id="sign-in-btn">Sign in.</a>
                         </p>
                     </form>
                 </div>
