fixed preliminary page links and footer

--- a/iadmin/dashboard.html
+++ b/iadmin/dashboard.html
@@ -53,7 +53,7 @@
             </ul> -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="btn btn-outline-light" href="http://www.taximania.com">Go to Main Site</a>
+                    <a class="btn btn-outline-light" id="visit_site" href="http://www.taximania.com">Go to Main Site</a>
                 </li>
             </ul>
         </div>
