--- a/login.html
+++ b/login.html
@@ -218,13 +218,19 @@
                         <div class="col-xl-5 col-lg-5">
                             <div class="footer-widget widget-basic">
                                 <h3 class="widget-title-large mb-4 text-white">Have a Question? Feel Free to Ask..Feedback</h3>
-                                <div class="sb-form mt-40">
-                                    <h5 class="text-white mb-4">Get latest updates & offers</h5>
-                                    <form class="footer-sb-form position-relative">
-                                        <input type="email" placeholder="Enter your email..." class="bg-white w-100">
-                                        <button type="submit" class="btn btn-primary">Subscribe</button>
-                                    </form>
+                                <div class="phone-box d-flex align-items-center">
+                                    <span
+                                        class="icon-wrapper d-inline-flex align-items-center justify-content-center rounded-circle bg-primary text-white"><i
+                                            class="flaticon-phone-call"></i></span>
+                                    <h4 class="text-white ms-3 mb-0">+978-9674-4455</h4>
                                 </div>
+                                <!-- <div class="sb-form mt-40">
+                                            <h5 class="text-white mb-4">Get latest updates & offers</h5>
+                                            <form class="footer-sb-form position-relative">
+                                                <input type="email" placeholder="Enter your email..." class="bg-white w-100">
+                                                <button type="submit" class="btn btn-primary">Subscribe</button>
+                                            </form>
+                                        </div>                               -->
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-5">
