--- a/login.html
+++ b/login.html
@@ -47,21 +47,21 @@
                     <div class="row align-items-center">
                         <div class="col-6 col-lg-3">
                             <div class="logo-wrapper">
-                                <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                                <a href="index"><img src="assets/img/logo.png" alt="logo"></a>
                             </div>
                         </div>
                         <div class="col-6 col-lg-9">
                             <div class="at_header_right d-flex align-items-center justify-content-end">
                                 <nav class="at_nav_menu d-none d-lg-block">
                                     <ul>
-                                        <li><a href="index.html">Home</a>
+                                        <li><a href="index">Home</a>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                        <li><a href="signup.html">Signup</a></li>
+                                        <li><a href="contact">Contact</a></li>
+                                        <li><a href="signup">Signup</a></li>
         
                                     </ul>
                                 </nav>
-                                <!-- <a href="car-listing.html" class="listing-btn text-white ms-4 d-none d-sm-block"><span class="icon-wrapper d-inline-flex align-items-center justify-content-center rounded-circle text-white me-2"><i class="fa-solid fa-plus"></i></span>Add Listing</a> -->
+                                <!-- <a href="car-listing" class="listing-btn text-white ms-4 d-none d-sm-block"><span class="icon-wrapper d-inline-flex align-items-center justify-content-center rounded-circle text-white me-2"><i class="fa-solid fa-plus"></i></span>Add Listing</a> -->
                                 <button class="ofcanvus-toggle header-toggle-btn ms-4 d-none d-lg-block">
                                     <span></span>
                                     <span></span>
@@ -83,14 +83,14 @@
         <!--mobile menu start-->
         <div class="mobile-menu position-fixed bg-white deep-shadow">
             <button class="close-menu position-absolute"><i class="fa-solid fa-xmark"></i></button>
-            <a href="index.html" class="logo-wrapper bg-secondary d-block mt-4 p-3 rounded-1 text-center"><img
+            <a href="index" class="logo-wrapper bg-secondary d-block mt-4 p-3 rounded-1 text-center"><img
                     src="assets/img/logo.png" alt="logo" class="img-fluid"></a>
             <nav class="mobile-menu-wrapper mt-40">
                 <ul>
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index">Home</a>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="login.html">Login</a></li>
+                    <li><a href="contact">Contact</a></li>
+                    <li><a href="login">Login</a></li>
         
                 </ul>
             </nav>
@@ -149,7 +149,7 @@
                         <div class="breadcrumb-content-wrapper text-center position-relative z-3">
                             <h1 class="text-white">Login</h1>
                             <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item text-white fw-500"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item text-white fw-500"><a href="index">Home</a></li>
                                 <li class="breadcrumb-item text-white fw-500">Page</li>
                                 <li class="breadcrumb-item text-white fw-500">Login</li>
                             </ol>
@@ -193,7 +193,7 @@
                                     </svg></span>
                                         Sign with Google</a> -->
                                 </div>
-                                <p class="text-xl-center mt-4">Don't have an account? <a href="signup.html">Sign Up</a></p>
+                                <p class="text-xl-center mt-4">Don't have an account? <a href="signup">Sign Up</a></p>
                             </form>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                             <div class="ms-lg-5 ms-xl-0 mt-5 mt-lg-0">
                                 <div class="row align-items-center">
                                     <div class="col-6">
-                                        <a href="index.html" class="footer-logo d-inline-block"><img src="assets/img/logo.png"
+                                        <a href="index" class="footer-logo d-inline-block"><img src="assets/img/logo.png"
                                                 alt="logo"></a>
                                         <br>
                                         <div class="footer-social  text-start mt-5">
@@ -261,7 +261,7 @@
                         <div class="row align-items-center">
                             <div class="col-sm-7">
                                 <div class="copyright-text">
-                                    <p class="mb-0">&copy; All rights reserved. <a href="index.html">Taximania team</a></p>
+                                    <p class="mb-0">&copy; All rights reserved. <a href="index">Taximania team</a></p>
                                 </div>
                             </div>
                             <div class="col-sm-5">
@@ -416,5 +416,5 @@
 </body>
 
 
-<!-- Mirrored from autohive-html.themetags.com/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Nov 2022 12:22:34 GMT -->
+<!-- Mirrored from autohive-html.themetags.com/login by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Nov 2022 12:22:34 GMT -->
 </html>
