--- a/signup.html
+++ b/signup.html
@@ -54,7 +54,7 @@
                                     <ul>
                                         <li><a href="index">Home</a>
                                         </li>                                 
-                                        <li ><a href="contact">Contact</a></li>
+                                        <!-- <li ><a href="contact">Contact</a></li> -->
                                         <li><a href="login">Login</a></li>
 
                                     </ul>
@@ -86,7 +86,7 @@
                 <ul>
                     <li><a href="index">Home</a>
                     </li>
-                    <li><a href="contact">Contact</a></li>
+                    <!-- <li><a href="contact">Contact</a></li> -->
                     <li><a href="login">Login</a></li>
                 
                 </ul>
