--- a/verify.html
+++ b/verify.html
@@ -56,7 +56,7 @@
                                     <ul>
                                         <li><a href="index">Home</a>
                                         </li>
-                                        <li><a href="contact">Contact</a></li>
+                                        <!-- <li><a href="contact">Contact</a></li> -->
                                         <li><a href="signup">Signup</a></li>
         
                                     </ul>
@@ -89,7 +89,7 @@
                 <ul>
                     <li><a href="index">Home</a>
                     </li>
-                    <li><a href="contact">Contact</a></li>
+                    <!-- <li><a href="contact">Contact</a></li> -->
                     <li><a href="login">Login</a></li>
         
                 </ul>
